fixed overflow bug in sign-in and sign-up pages

--- a/src/app/(authentication)/(components)/(card)/Card.module.css
+++ b/src/app/(authentication)/(components)/(card)/Card.module.css
@@ -1,14 +1,22 @@
 .container {
     display: flex;
     flex-direction: row;
-    justify-content: center;
-    align-items: center;
+    margin: auto;
     width: 100%;
-    height: 100%;
     max-width: 894px;
-    max-height: 631px;
     border-radius: var(--border-radius);
     box-shadow: 0px 10px 10px 0px rgba(0, 0, 0, 0.2);
+    height: 631px;
+    position: relative;
+}
+
+.link {
+    position: absolute;
+    bottom: -30px;
+    color: white;
+    font-size: var(--font-size-small);
+    width: 100%;
+    text-align: center;
 }
 
 .leftContainer {
@@ -86,6 +94,11 @@
     .rightContainer {
         border-radius: var(--border-radius-small);
         box-shadow: 0px 10px 10px 0px rgba(0, 0, 0, 0.2);
+        margin: auto;
+    }
+    .link {
+        right: 50%;
+        transform: translateX(50%);
     }
 }
 
