--- a/src/app/(authentication)/(components)/(email-verification-card)/Card.module.css
+++ b/src/app/(authentication)/(components)/(email-verification-card)/Card.module.css
@@ -6,8 +6,7 @@
     background-color: white;
     position: relative;
     z-index: 1;
-    justify-content: center;
-    align-items: center;
+    margin: auto;
     padding-block: var(--padding-block-xlarge);
     padding-inline: var(--padding-block-xlarge);
     border-radius: var(--border-radius);
@@ -57,6 +56,8 @@
 .loadingBackground {
     width: 100%;
     height: 100%;
+    top: 0;
+    left: 0;
     position: absolute;
     backdrop-filter: blur(5px);
     background-color: rgba(var(--accent-blue), 0.5);
@@ -77,4 +78,10 @@
     align-items: center;
     border-radius: var(--border-radius);
     background-color: rgb(255, 255, 255);
+}
+
+@media (max-width: 425px) {
+    .container {
+        padding-inline: var(--padding-block-large);
+    }
 }
