--- a/src/app/(authentication)/password-reset/[token]/page.module.css
+++ b/src/app/(authentication)/password-reset/[token]/page.module.css
@@ -1,7 +1,6 @@
 .pageContainer {
     width: 100%;
-    height: 100%;
-    min-height: 500px;
+    height: calc(100% - var(--nav-height));
     display: flex;
     justify-content: center;
     align-items: center;
